Add modules surefire args instead of opening packages